# echobase

./: .dockerignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  package.json  pnpm-lock.yaml
apps/bullmq-worker/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/bullmq-worker/src/bullmq_worker/: loop.py  main.py  sandbox.py
apps/hono-api/: .dockerignore  .env.example  Dockerfile  package.json
apps/hono-api/src/: index.ts
apps/hono-api/src/lib/: crypto.ts  db.ts  github.ts  queue.ts  sessions.ts
apps/hono-api/src/routes/: internal.ts  repositories.ts  sessions.ts  tasks.ts  user.ts
apps/next-js-app/: .dockerignore  Dockerfile  package.json
apps/next-js-app/app/: layout.tsx  page.tsx
apps/next-js-app/app/(auth)/connect/: layout.tsx  page.tsx
apps/next-js-app/app/(main)/workflow/: layout.tsx  page.tsx
apps/next-js-app/app/(main)/workflow/components/: RepositorySelect.tsx  SessionCard.tsx
apps/next-js-app/components/: RepositorySelect.tsx  container.tsx
apps/next-js-app/components/ui/: waveform.tsx
apps/next-js-app/hooks/: useRepositories.ts  useSelectedRepository.ts  useUser.ts
apps/next-js-app/lib/: api.ts  session.ts  usePipecat.ts  usePipecatBot.ts
apps/next-js-app/providers/: SWRProvider.tsx
apps/pipecat/: .dockerignore  Dockerfile  README.md  package.json  pyproject.toml
apps/pipecat-ws/: .env.example  .gitignore  Dockerfile  pyproject.toml
apps/pipecat-ws/src/pipecat_ws/: bot.py  config.py  main.py
apps/pipecat-ws/src/pipecat_ws/models/: __init__.py  advisor.py  executor.py
apps/pipecat-ws/src/pipecat_ws/services/: sandbox.py  session.py
apps/pipecat-ws/src/pipecat_ws/tools/: __init__.py  call_advisor.py  call_executor.py  create_task.py
apps/pipecat/src/pipecat/: main.py
