[project]
name = "bullmq-worker"
version = "0.1.0"
description = "BullMQ worker that consumes jobs from the `tasks` queue."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "bullmq>=2.0",
  "python-dotenv>=1.0",
  "openai>=1.54",
  "e2b>=1.0",
  "httpx>=0.27",
]

[project.scripts]
bullmq-worker = "bullmq_worker.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bullmq_worker"]
